[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/Tutorial/part2.gd" type="Script" id=1]
[ext_resource path="res://Scenes/OverlayIllumination.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Heroes/AnimatedHeroes/AnimatedPinky.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Heroes/AnimatedHeroes/AnimatedWooly.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Heroes/AnimatedHeroes/AnimatedBluey.tscn" type="PackedScene" id=5]

[node name="Part2Container" type="MarginContainer"]
margin_right = 421.0
margin_bottom = 299.0
script = ExtResource( 1 )

[node name="OverlayIllumination" parent="." instance=ExtResource( 2 )]
position = Vector2( 208, 140 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 396.0
margin_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 7
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 371.0
margin_bottom = 67.0
text = "Choose your character"
align = 1
valign = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer2"]
margin_top = 71.0
margin_right = 371.0
margin_bottom = 91.0
theme_type_variation = "SmallHSeparator"

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 95.0
margin_right = 371.0
margin_bottom = 127.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = "Label2"
text = "M to main menu"
align = 1
valign = 1
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer2"]
margin_top = 131.0
margin_right = 371.0
margin_bottom = 151.0
theme_type_variation = "SmallHSeparator"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_left = 5.0
margin_top = 155.0
margin_right = 365.0
margin_bottom = 197.0
size_flags_horizontal = 4
size_flags_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_right = 360.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Pinky" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 112.0
margin_bottom = 38.0
text = "Pinky"
icon_align = 1

[node name="VSeparator" type="VSeparator" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 116.0
margin_right = 120.0
margin_bottom = 38.0

[node name="Wooly" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 236.0
margin_bottom = 38.0
text = "Wooly"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 244.0
margin_bottom = 38.0

[node name="Bluey" type="Button" parent="VBoxContainer2/VBoxContainer/HBoxContainer"]
margin_left = 248.0
margin_right = 360.0
margin_bottom = 38.0
text = "Bluey"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_left = 180.0
margin_top = 42.0
margin_right = 180.0
margin_bottom = 42.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="AnimatedPinky" parent="VBoxContainer2/VBoxContainer/HBoxContainer2" instance=ExtResource( 3 )]
animation = "run"

[node name="AnimatedWooly" parent="VBoxContainer2/VBoxContainer/HBoxContainer2" instance=ExtResource( 4 )]
position = Vector2( 3, 30 )
animation = "throw"

[node name="AnimatedBluey" parent="VBoxContainer2/VBoxContainer/HBoxContainer2" instance=ExtResource( 5 )]
position = Vector2( 123, 28 )
animation = "throw"
